--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   },
   "dependencies": {
     "@vercel/postgres": "^0.5.1",
+    "@vercel/postgres-kysely": "^0.6.0",
     "dotenv-load": "^3.0.0",
+    "kysely": "^0.26.3",
     "next": "14.0.3",
     "next-env": "^1.1.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "web-push": "^3.6.6"
   },
   "devDependencies": {
     "@types/node": "^20",
